fixed page jumping, reformatted base.html

--- a/galapagos_comparison/static_media/css/font_style.css
+++ b/galapagos_comparison/static_media/css/font_style.css
@@ -141,7 +141,7 @@ overflow:auto;
 
 .textItems{
 	font-family: museo-sans-300;
-	font-size:5em;
+	font-size:3.5em;
 	font-weight: 800;
 	color: #29221c; 
 	line-height:1.7em;
